# NexaPCB

./: .gitignore  LICENSE  README.md  __init__.py  ast_parser.py  config.py  fuzzy_matcher.py  pyproject.toml  reports.py  requirements.txt
docs/: AI_AGENT_WORKFLOW.md  CLI_REFERENCE.md  CUSTOM_PARTS.md  DOCTOR.md  ERRORS.md  EXAMPLES.md  PART_REQUEST_SYSTEM.md  QA_TEST_PLAN.md  REPORTS.md  SKIDL_FORMAT_GUIDE.md
nexapcb/: __init__.py  assets.py  ast_parser.py  checker.py  cli.py  examples_lib.py  exporter.py  helptext.py  inspectors.py  part_tools.py  project.py  reports.py  xml_parser.py
nexapcb/utils/: fs.py  process.py
tests/: run_fixture_tests.py  run_full_qa.sh  run_smoke_tests.py
tests/fixtures/bad_missing_custom_asset/: main.py
tests/fixtures/bad_pin_pad_mismatch/: main.py
tests/fixtures/bad_unconnected_pins/: main.py
tests/fixtures/custom_part_demo/: main.py
tests/fixtures/custom_part_demo/custom_assets/3d_models/: demo.step
tests/fixtures/custom_part_demo/custom_assets/footprints/: demo.kicad_mod
tests/fixtures/custom_part_demo/custom_assets/symbols/: demo.kicad_sym
tests/fixtures/modular_esp32/: connectors.py  main.py  mcu.py  power.py
tests/fixtures/rc_filter/: main.py
utils/: fs.py  process.py
