[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexapcb"
version = "0.1.0"
description = "SKiDL-to-KiCad automation tool with JLC/LCSC assets, custom parts, validation, Textual TUI, and MCP-ready control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Suraj Bhati" }
]
keywords = [
  "skidl",
  "kicad",
  "pcb",
  "eda",
  "jlcpcb",
  "lcsc",
  "automation",
  "textual",
  "mcp"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "skidl>=1.2.3",
  "textual>=0.70.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0"
]

jlc = [
  "JLC2KiCadLib"
]

[project.scripts]
nexapcb = "nexapcb.cli:main"
nexapcb-tui = "nexapcb.tui_app:main"
nexapcb-mcp-json = "nexapcb.mcp_json_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexapcb*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
